# ssX

./: BUILD  BUILD.txt  INSTALL-X.org  INSTALL.PS  INSTALL.TXT  INSTALL.ms  Imakefile  Install  Install.txt  LICENSE.txt  Makefile  Makefile.ini  README  README.md  README.txt  RELNOTES  RELNOTES-X.org  RELNOTES.PS  RELNOTES.ms  RELNOTES.txt  configure  meson.build  meson_options.txt  registry
.github/: SECURITY.md
.github/workflows/: ci.yaml  clang.yaml  codeql.yml  codeqlvanilla.yml  gcc.yml
config/: Imakefile  meson.build
config/cf/: Amoeba.cf  DGUX.cf  DragonFly.cf  FreeBSD.cf  Imake.cf  Imake.rules  Imake.tmpl  Imakefile  Library.tmpl  Mips.cf  Motif.rules  Motif.tmpl  NetBSD.cf  Oki.cf  OpenBSD.cf  OpenBSDLib.rules  OpenBSDLib.tmpl  Project.tmpl  QNX4.cf  README  Server.tmpl  Threads.tmpl  TinyX.cf  Win32.cf  Win32.rules  WinLib.tmpl  X11.rules  X11.tmpl  apollo.cf  bsd.cf  bsdLib.rules  bsdLib.tmpl  bsdi.cf  bsdiLib.rules  bsdiLib.tmpl  cde.rules  cde.tmpl  convex.cf  cray.cf  cross.def  (+77 more)
config/imake/: Imakefile  Makefile.ini  ccimake.c  imake.c  imake.man  imakemdep.h  imakesvc.cmd
config/makedepend/: Imakefile  cpp.ed  cppsetup.c  def.h  ifparser.c  ifparser.h  include.c  main.c  mkdepend.man  parse.c  pr.c
config/pswrap/: Imakefile  lexer.l  main.c  psw.c  psw.h  pswfile.c  pswparser.y  pswpriv.h  pswrap.man  pswstring.c  pswtypes.h
config/util/: Imakefile  Makefile.ini  aminstall.sh  bsdinst.sh  buildos2.cmd  ccmakedep.man  checktree.c  chownxterm.c  cleanlinks.sh  elistgen.hp  elistgen.ibm  elistgen.sun  elistgen.usl  gccmdep.cpp  indir.cmd  install.sh  lndir.c  lndir.man  makedef.cmd  makeg.man  makeg.sh  makestrs.c  makestrs.man  mdepend.cpp  mergelib.cpp  mergelib.man  mkdirhier.c  mkdirhier.cmd  mkdirhier.man  mkdirhier.sh  mkhtmlindex.pl  mkhtmlindex.sh  os2inst.cmd  printver.c  revpath.c  xmake.cmd  xmkmf.cmd  xmkmf.cpp  xmkmf.man
doc/: Imakefile  README.isc
doc/hardcopy/: Imakefile
doc/man/: Imakefile
doc/misc/: INSTALL.ms  Imakefile  RELNOTES.ms
doc/specs/: Imakefile  specindex.cpp  specindex.html
doc/util/: macros.t
extras/: README
extras/FreeType/: HOWTO.txt  INSTALL  Makefile.in  README.XFree86  announce  configure  configure.in  freetype.spec  ft_conf.h.in  mkinstalldirs  net.m4  readme.1st
extras/Mesa/: .cvsignore  ChangeLog  Make-config  Makefile  Makefile.X11  Makefile.in  README  aclocal.m4  configure  configure.in  fixam  gen_srclists.sh  ltmain.sh  mkinstalldirs  rules.windml
extras/Mesa/si-glu/: Makefile.X11  Makefile.am  dummy.cc
extras/Mesa/si-glu/include/: Makefile.am  gluos.h
extras/Mesa/si-glu/libnurbs/: Makefile.am
extras/Mesa/si-glu/libnurbs/interface/: Makefile.am  bezierEval.cc  bezierEval.h  bezierPatch.cc  bezierPatch.h  bezierPatchMesh.cc  bezierPatchMesh.h  glcurveval.cc  glcurveval.h  glimports.h  glinterface.cc  glrenderer.cc  glrenderer.h  glsurfeval.cc  glsurfeval.h  incurveeval.cc  insurfeval.cc  mystdio.h  mystdlib.h
extras/Mesa/si-glu/libnurbs/internals/: Makefile.am  arc.cc  arc.h  arcsorter.cc  arcsorter.h  arctess.cc  arctess.h  backend.cc  backend.h  basiccrveval.cc  basiccrveval.h  basicsurfeval.cc  basicsurfeval.h  bezierarc.h  bin.cc  bin.h  bufpool.cc  bufpool.h  cachingeval.cc  cachingeval.h  ccw.cc  coveandtiler.cc  coveandtiler.h  curve.cc  curve.h  curvelist.cc  curvelist.h  curvesub.cc  dataTransform.cc  dataTransform.h  defines.h  displaylist.cc  displaylist.h  displaymode.h  flist.cc  flist.h  flistsorter.cc  flistsorter.h  gridline.h  gridtrimvertex.h  (+58 more)
extras/Mesa/si-glu/libnurbs/nurbtess/: Makefile.am  definitions.h  directedLine.cc  directedLine.h  glimports.h  gridWrap.cc  gridWrap.h  monoChain.cc  monoChain.h  monoPolyPart.cc  monoPolyPart.h  monoTriangulation.cc  monoTriangulation.h  mystdio.h  mystdlib.h  partitionX.cc  partitionX.h  partitionY.cc  partitionY.h  polyDBG.cc  polyDBG.h  polyUtil.cc  polyUtil.h  primitiveStream.cc  primitiveStream.h  quicksort.cc  quicksort.h  rectBlock.cc  rectBlock.h  sampleComp.cc  sampleComp.h  sampleCompBot.cc  sampleCompBot.h  sampleCompRight.cc  sampleCompRight.h  sampleCompTop.cc  sampleCompTop.h  sampleMonoPoly.cc  sampleMonoPoly.h  sampledLine.cc  (+4 more)
extras/Mesa/si-glu/libtess/: Makefile.am  README  alg-outline  dict-list.h  dict.c  dict.h  geom.c  geom.h  memalloc.c  memalloc.h  mesh.c  mesh.h  normal.c  normal.h  priorityq-heap.c  priorityq-heap.h  priorityq-sort.h  priorityq.c  priorityq.h  render.c  render.h  sweep.c  sweep.h  tess.c  tess.h  tessmono.c  tessmono.h
extras/Mesa/si-glu/libutil/: Makefile.am  error.c  glue.c  gluint.h  mipmap.c  project.c  quad.c  registry.c
extras/X-TrueType/: CHANGES.eng  Imakefile  xttcache.c  xttcache.h  xttcap.c  xttcap.h  xttcconv.c  xttcconv.h  xttcconvP.h  xttchinfo.c  xttcommon.h  xttdump.c  xttfuncs.c  xttmisc.c  xttprop.c  xttstruct.h  xttversion.h
extras/Xpm/: README.XFree86
extras/fontconfig/: README  fontconfig-config.in
extras/libxml2/: INSTALL  Makefile.am  Makefile.in  TODO  configure  libxml.spec  mkinstalldirs  trio.c  trio.h  triodef.h  trionan.c  trionan.h  triop.h  triostr.c  triostr.h
extras/ogl-sample/: README.XF86
extras/regex/: cclass.h  cname.h  regcomp.c  regerror.c  regexec.c
extras/rman/: getopt.c  rman.1  rman.c
extras/zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  (+7 more)
fonts/: Imakefile
glx/: meson.build
hw/: meson.build
hw/xfree86/drivers/amdgpu/: meson.build
hw/xfree86/drivers/evdev/: meson.build
include/: DECkeysym.h  HPkeysym.h  Imakefile  Sunkeysym.h  X.h  XF86keysym.h  XWDFile.h  Xalloca.h  Xarch.h  Xdefs.h  Xfuncproto.h  Xfuncs.h  Xmd.h  Xos.h  Xos_r.h  Xosdefs.h  Xpoll.h  Xproto.h  Xprotostr.h  Xthreads.h  Xw32defs.h  Xwinsock.h  keysym.h  keysymdef.h  loaderErrors.h  meson.build
lib/: Imakefile
lib/fontconfig/src/: Imakefile  Makefile.am  fccache.c  fccfg.c  fccharset.c  fcdir.c  fcpat.c  fcxml.c  fontconfig-def.cpp
nls/: Imakefile  compose.dir  locale.alias  locale.dir
os/: WaitFor.c  connection.c  io.c
present/: meson.build
programs/: Imakefile
workInProgress/: Imakefile
(+14208 files in other folders)
